# ProgrammingC

./: README.md
Bonus/snake/: snake.c
RGR/: РГР_прог.docx
RGR/src/: training.c
Semester_1/Lab10_DataStructures/: Makefile.txt  geometry.c.txt  point.h.txt
Semester_1/Lab11_Debugger/: task1.c  task2.c  task3.c  task4.c
Semester_1/Lab12_MakeCmake/Lab12_MakeCmake/task1/background/: CMakeLists.txt
Semester_1/Lab12_MakeCmake/task0/: Makefile
Semester_1/Lab12_MakeCmake/task1/background/: Makefile
Semester_1/Lab12_MakeCmake/task1/pipes/: Makefile  cmake_install.cmake
Semester_1/Lab12_MakeCmake/task1/task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
Semester_1/Lab2_Circs/: equation.c  leapyear.c  temperature.c
Semester_1/Lab3_Cucles/: task5.c  task6.c  task7.c  task8.c  task9.c
Semester_1/Lab4_NestedCucles/: rectangle_of_numbers.c
Semester_1/Lab5_Bitoperations/: task4.c.txt
Semester_1/Lab6_Arrays/: task5.c.txt
Semestr_2/Lab1_Sort/: sort.c
Semestr_2/Lab2_Lists/: list.c
Semestr_2/Lab3_Git/: prog_git.docx
Semestr_2/Lab4_TextFile/: file.txt  reverstext.c
Semestr_2/Lab5_BinaryFile/: binar  binar.c
Semestr_2/Lab6_Libraries/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  sort_algs.c  student.h  student_program  student_program_dynamic  student_utils.c
Semestr_2/Lab7_Thread/: laba7.md  pthread_7.c
lab1/: task1.c.txt  task2.c.txt  task3.c.txt
lab3/: task5.c.txt  task6.c.txt  task7.c.txt  task8.c.txt  task9.c.txt
lab4/: task4.c.txt
lab5/: task5.c.txt
lab6/: task4.c.txt
lab8/: matrix.c.txt  matrix.txt
lab9/: task5.c.txt
laba10/: main.c.txt
